image links change

--- a/Admin_Component/admin.html
+++ b/Admin_Component/admin.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="admin_style.css" />
     <link
       rel="icon"
-      href="../Resources/Images/logo/svg/White logo - no background.svg"
+      href="./Resources/Images/logo/svg/White logo - no background.svg"
       type="image/png"
     />
     <!-- <script src="../Scripts/auth_url.js"></script> -->
@@ -22,7 +22,7 @@
       <aside id="sidebar-wrapper">
         <div class="sidebar-brand">
           <img
-            src="../Resources/Images/logo/png/White logo - no background.png"
+            src="./Resources/Images/logo/png/White logo - no background.png"
             alt=""
             srcset=""
             id="sidebar-logo"
@@ -432,7 +432,7 @@
                <div class="col-lg-3 col-md-6 col-sm-6">
                     <div class="footer__about">
                         <div class="footer__logo">
-                            <a href="#"><img width="150px" src="Resources/Images/logo/png/White logo - no background.png" alt=""></a>
+                            <a href="#"><img width="150px" src="./Resources/Images/logo/png/White logo - no background.png" alt=""></a>
                         </div>
                         <p>The joy of our customers is the narrative that we continuously write and enrich through the pages of our bookstore</p>
                     </div>
