--- a/Admin_Component/manage_products.html
+++ b/Admin_Component/manage_products.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="../Styles/bootstrap.css">
     <link rel="stylesheet" href="../Styles/navbar_footer_styles.css">
     <link rel="stylesheet" href="admin_style.css">
-    <link rel="icon" href="../Resources/Images/logo/svg/White logo - no background.svg" type="image/png">
+    <link rel="icon" href="./Resources/Images/logo/svg/White logo - no background.svg" type="image/png">
     
   </head>
 <body>
@@ -19,7 +19,7 @@
         <aside id="sidebar-wrapper">
           <div class="sidebar-brand">
             <img
-              src="../Resources/Images/logo/png/White logo - no background.png"
+              src="./Resources/Images/logo/png/White logo - no background.png"
               alt=""
               srcset=""
               id="sidebar-logo"
@@ -81,7 +81,7 @@
              
                   <div class="row">
                       <div class="col-3">
-                        <button  class="btn btn-dark" id="addb" type="button"  data-bs-toggle="modal" data-bs-target="#ModelBook"><img src="../Resources/Images/icon/book.png" width="25vw" ></button>
+                        <button  class="btn btn-dark" id="addb" type="button"  data-bs-toggle="modal" data-bs-target="#ModelBook"><img src="./Resources/Images/icon/book.png" width="25vw" ></button>
                       </div>
                       <div class="col-7">
                         <div class="container-fluid">
