--- a/login.html
+++ b/login.html
@@ -31,7 +31,7 @@
           class="col-md-6 rounded-4 d-flex justify-content-center align-items-center flex-column left-box"
         >
           <!-- <div class="featured-image mb-3">
-                <img src="Resources/Images/login-sign in/loginimage.png" class="img-fluid " >
+                <img src="/Images/login-sign in/loginimage.png" class="img-fluid " >
                </div> -->
         </div>
         <!-------------------- ------ Right Box ---------------------------->
