--- a/nav.html
+++ b/nav.html
@@ -52,7 +52,7 @@
         </nav>
         <nav class="main-navigation "  >
             <div class="logo">
-                <img class="navbar-brand" src="Resources/Images/logo/logo.png" alt="book logo" height="50">
+                <img class="navbar-brand" src="./Resources/Images/logo/logo.png" alt="book logo" height="50">
             </div>
             <ul class="nav-links " > 
                 <li><a href="index.html">Home</a></li>
