--- a/orderSeller.html
+++ b/orderSeller.html
@@ -26,7 +26,7 @@
       <aside id="sidebar-wrapper">
         <div class="sidebar-brand">
           <img
-            src="../Resources/Images/logo/png/White logo - no background.png"
+            src="./Resources/Images/logo/png/White logo - no background.png"
             alt=""
             srcset=""
           />
