--- a/wishlist.html
+++ b/wishlist.html
@@ -44,7 +44,7 @@
     </nav>
     <nav class="main-navigation "  >
         <div class="logo">
-            <img class="navbar-brand" src="Resources/Images/logo/logo.png" alt="book logo" height="50">
+            <img class="navbar-brand" src="./Resources/Images/logo/logo.png" alt="book logo" height="50">
         </div>
         <ul class="nav-links " > 
             <li><a href="index.html">Home</a></li>
@@ -96,7 +96,7 @@
                   <div class="footer__about">
                       <div class="footer__logo">
                           <a href="#"><img width="150px"
-                                  src="Resources/Images/logo/png/White logo - no background.png" alt=""></a>
+                                  src="./Resources/Images/logo/png/White logo - no background.png" alt=""></a>
                       </div>
                       <p>The joy of our customers is the narrative that we continuously write and enrich through the
                           pages of our bookstore</p>
