--- a/Admin_Component/customer_service.html
+++ b/Admin_Component/customer_service.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="admin_style.css" />
     <link
       rel="icon"
-      href="../Resources/Images/logo/svg/White logo - no background.svg"
+      href="./Resources/Images/logo/svg/White logo - no background.svg"
       type="image/png"
     />
   </head>
@@ -21,7 +21,7 @@
       <aside id="sidebar-wrapper">
         <div class="sidebar-brand">
           <img
-            src="../Resources/Images/logo/png/White logo - no background.png"
+            src="./Resources/Images/logo/png/White logo - no background.png"
             alt=""
             srcset=""
             id="sidebar-logo"
