--- a/Checkout_Component/checkout.html
+++ b/Checkout_Component/checkout.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="../Styles/style.css">
     <link rel="stylesheet" href="checkout_style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <link rel="icon" href="../Resources/Images/logo/svg/White logo - no background.svg" type="image/png"> 
+    <link rel="icon" href="./Resources/Images/logo/svg/White logo - no background.svg" type="image/png"> 
     <script src="../Scripts/jquery-3.7.1.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script> 
     <script defer src="../Scripts/logout.js"></script>
@@ -40,7 +40,7 @@
       </nav>
       <nav class="main-navigation "  >
           <div class="logo">
-              <img class="navbar-brand" src="../Resources/Images/logo/logo.png" alt="book logo" height="50">
+              <img class="navbar-brand" src="./Resources/Images/logo/logo.png" alt="book logo" height="50">
           </div>
           <ul class="nav-links " > 
               <li><a href="../index.html">Home</a></li>
@@ -297,7 +297,7 @@
               <div class="footer__about">
                   <div class="footer__logo">
                       <a href="#"><img width="150px"
-                              src="Resources/Images/logo/png/White logo - no background.png" alt=""></a>
+                              src="./Resources/Images/logo/png/White logo - no background.png" alt=""></a>
                   </div>
                   <p>The joy of our customers is the narrative that we continuously write and enrich through the
                       pages of our bookstore</p>
