--- a/ProductDetails.html
+++ b/ProductDetails.html
@@ -39,7 +39,7 @@
         </nav>
         <nav class="main-navigation "  >
             <div class="logo">
-                <img src="Resources/Images/logo/logo.png" alt="book logo" height="50">
+                <img src="./Resources/Images/logo/logo.png" alt="book logo" height="50">
             </div>
             <ul class="nav-links"> 
                 <li><a href="#">Home</a></li>
@@ -135,7 +135,7 @@
                <div class="col-lg-3 col-md-6 col-sm-6">
                     <div class="footer__about">
                         <div class="footer__logo">
-                            <a href="#"><img width="150px" src="Resources/Images/logo/png/White logo - no background.png" alt=""></a>
+                            <a href="#"><img width="150px" src="./Resources/Images/logo/png/White logo - no background.png" alt=""></a>
                         </div>
                         <p>The joy of our customers is the narrative that we continuously write and enrich through the pages of our bookstore</p>
                     </div>
