--- a/seller.html
+++ b/seller.html
@@ -43,7 +43,7 @@
     <aside id="sidebar-wrapper">
       <div class="sidebar-brand">
         <img
-          src="../Resources/Images/logo/png/White logo - no background.png"
+          src="./Resources/Images/logo/png/White logo - no background.png"
           alt=""
           srcset=""
         />
@@ -104,7 +104,7 @@
          
               <div class="row">
                   <div class="col-3">
-                    <button  class="btn btn-dark" id="addb" type="button"  data-bs-toggle="modal" data-bs-target="#ModelBook"><img src="Resources/Images/icon/book.png" width="25vw" ></button>
+                    <button  class="btn btn-dark" id="addb" type="button"  data-bs-toggle="modal" data-bs-target="#ModelBook"><img src="./Resources/Images/icon/book.png" width="25vw" ></button>
                   </div>
                   <div class="col-7">
                     <div class="container-fluid">
