--- a/userProfile.html
+++ b/userProfile.html
@@ -42,7 +42,7 @@
     </nav>
     <nav class="main-navigation "  >
         <div class="logo">
-            <img class="navbar-brand" src="Resources/Images/logo/logo.png" alt="book logo" height="50">
+            <img class="navbar-brand" src="./Resources/Images/logo/logo.png" alt="book logo" height="50">
         </div>
         <ul class="nav-links " > 
             <li><a href="index.html">Home</a></li>
@@ -82,7 +82,7 @@
             <div class="col-12 col-m-4 col-sm-4 ">
               <div class="card mb-4">
                 <div class="card-body text-center">
-                  <img src="Resources/Images/user-profile.png" alt="avatar"
+                  <img src="./Resources/Images/user-profile.png" alt="avatar"
                     class=" img-fluid" style="width: 150px;">
                   <h5 class="my-3" id="nameText"></h5>
                   <p class="text-muted mb-1" id="roleText"></p>
@@ -182,7 +182,7 @@
               <div class="footer__about">
                   <div class="footer__logo">
                       <a href="#"><img width="150px"
-                              src="Resources/Images/logo/png/White logo - no background.png" alt=""></a>
+                              src="./Resources/Images/logo/png/White logo - no background.png" alt=""></a>
                   </div>
                   <p>The joy of our customers is the narrative that we continuously write and enrich through the
                       pages of our bookstore</p>
